add categories package
